add headers to htaccess to prevent cors and basic login methods in static

--- a/static/index.html
+++ b/static/index.html
@@ -13,24 +13,22 @@
     <link rel="stylesheet" href="src/css/main.css">
 </head>
 <body ng-app="bikersApp" role="document">
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top" ng-controller="NavCtrl">
         <div class="container">
             <div class="navbar-header">
                 <a href="#" class="navbar-brand">Bikers Polska</a>
             </div>
-            <div class="navbar-collapse collapse">
+            <div class="navbar-collapse collapse" ng-if="logged">
                 <ul class="nav navbar-nav">
-                    <li class="active">
-                        <a href="#/">Strona główna</a>
-                    </li>git
+                    <li ng-class="{ 'active' : url.active }" ng-repeat="url in urls">
+                        <a ng-href="{{url.path}}">{{url.name}}</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="container theme-showcase" role="main" ng-view>
-
-    </div>
+    <div class="container theme-showcase" role="main" ng-view></div>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
@@ -38,10 +36,12 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
 
-    <script src="src/js/controllers/controllers.js"></script>
-
     <script src="src/js/services/src/auth.js"></script>
     <script src="src/js/services/services.js"></script>
+
+    <script src="src/js/controllers/src/nav.js"></script>
+    <script src="src/js/controllers/controllers.js"></script>
+
 
     <script src="src/js/main.js"></script>
 </body>
