add controllers parts and templates bikes/new parts/new

--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,10 @@
     <script src="src/js/services/services.js"></script>
 
     <script src="src/js/controllers/src/nav.js"></script>
+    <script src="src/js/controllers/src/bikes.js"></script>
+    <script src="src/js/controllers/src/login.js"></script>
+    <script src="src/js/controllers/src/parts.js"></script>
+    <script src="src/js/controllers/src/users.js"></script>
     <script src="src/js/controllers/controllers.js"></script>
 
 
