controllers.routes fix

--- a/static/index.html
+++ b/static/index.html
@@ -44,6 +44,7 @@
     <script src="src/js/controllers/src/login.js"></script>
     <script src="src/js/controllers/src/parts.js"></script>
     <script src="src/js/controllers/src/users.js"></script>
+    <script src="src/js/controllers/src/routes.js"></script>
     <script src="src/js/controllers/controllers.js"></script>
 
 
