--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" ng-controller="NavCtrl">
         <div class="container">
             <div class="navbar-header">
-                <a href="#" class="navbar-brand">Bikers Polska</a>
+                <a href="#/" class="navbar-brand">Bikers Polska</a>
             </div>
             <div class="navbar-collapse collapse" ng-if="logged">
                 <ul class="nav navbar-nav">
