--- a/static/index.html
+++ b/static/index.html
@@ -45,6 +45,7 @@
     <script src="src/js/controllers/src/parts.js"></script>
     <script src="src/js/controllers/src/users.js"></script>
     <script src="src/js/controllers/src/routes.js"></script>
+    <script src="src/js/controllers/src/messages.js"></script>
     <script src="src/js/controllers/controllers.js"></script>
 
 
