--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,9 @@
                         <a ng-href="{{url.path}}">{{url.name}}</a>
                     </li>
                 </ul>
+                <div class="navbar-text navbar-right">
+                    <a href="#" class="navbar-link" ng-click="logout()">Wyloguj</a>
+                </div>
             </div>
         </div>
     </nav>
