--- a/static/index.html
+++ b/static/index.html
@@ -41,6 +41,7 @@
 
     <script src="src/js/services/src/auth.js"></script>
     <script src="src/js/services/src/bikes.js"></script>
+    <script src="src/js/services/src/parts.js"></script>
     <script src="src/js/services/services.js"></script>
 
     <script src="src/js/controllers/src/nav.js"></script>
