--- a/static/index.html
+++ b/static/index.html
@@ -42,6 +42,7 @@
     <script src="src/js/services/src/auth.js"></script>
     <script src="src/js/services/src/parts.js"></script>
     <script src="src/js/services/src/bikes.js"></script>
+    <script src="src/js/services/src/routes.js"></script>
     <script src="src/js/services/services.js"></script>
 
     <script src="src/js/controllers/src/nav.js"></script>
