--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
     <link rel="stylesheet" href="src/css/main.css">
 </head>
-<body ng-app="bikersApp" role="document">
+<body ng-app="bikersApp" role="document" ng-class="'background-' + background">
     <nav class="navbar navbar-inverse navbar-fixed-top" ng-controller="NavCtrl">
         <div class="container">
             <div class="navbar-header">
