SQL function to get unread messages count

--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,9 @@
                     </li>
                 </ul>
                 <div class="navbar-text navbar-right">
-                    <a href="#" class="navbar-link" ng-click="logout()">Wyloguj</a>
+                    <a href="#" class="navbar-link" ng-click="logout()">
+                        <span class="glyphicon glyphicon-off" aria-hidden="true"></span> Wyloguj
+                    </a>
                 </div>
             </div>
         </div>
